k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hardened-app-service
  namespace: rywel-dev  # ✅ NS
spec:
  selector:
    app: hardened-app
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080
  type: ClusterIP
