k8s/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: hardened-app-route
  namespace: rywel-dev  # ✅ NS
  annotations:
    haproxy.router.openshift.io/timeout: 60s
spec:
  to:
    kind: Service
    name: hardened-app-service
  port:
    targetPort: 8080
  tls:
    termination: edge
  wildcardPolicy: None
